# retromulator-mobile

./: .gitignore  README.md  RetromulatorIOS.jucer
source/akaiLib/: akaiIsoReader.cpp  akaiIsoReader.h  device.cpp  device.h
source/baseLib/: filesystem.cpp
source/bridge/bridgeLib/: commandWriter.cpp  tcpConnection.cpp
source/dsp56300/source/dsp56kBase/: conditionvariable.cpp  trigger.cpp
source/dsp56300/source/dsp56kEmu/: buildconfig.h  disasm.cpp  dma.cpp  dsp.cpp  dsp_ops.inl  dspconfig.h  dspthread.cpp  esai.h  essi.cpp  essi.h  esxi.h  fastmath.h  hdi08.cpp  hi08.h  instructioncache.cpp  interpreterunittests.h  jit.cpp  jitblock.h  jitdspmode.cpp  jitdspvalue.h  (+18 more)
source/dx7Lib/: EGS.h  HD44780.h  HD6303R.cpp  HD6303R.h  HD6303R_inst.cpp  LFQ.h  Message.h  OPS.h  device.cpp  device.h  dx7.cpp  dx7.h  filter.h  romloader.cpp  romloader.h
source/hardwareLib/: i2c.cpp  i2cFlash.cpp  sciMidi.h
source/jucePluginLib/: CMakeLists.txt  controller.cpp  parameterdescriptions.cpp  processor.cpp  processor.h  tools.cpp
source/jucePluginLib/patchdb/: patch.cpp
source/libresample/include/: libresample.h
source/libresample/src/: resample.c  resample_defs.h  resamplesubs.c
source/mc68k/: CMakeLists.txt  cpuState.h  endian.h  gpt.cpp  gpt.h  hdi08.cpp  hdi08.h  hdi08periph.h  logging.cpp  logging.h  mc68k.cpp  mc68k.h  memoryOps.h  musashiEntry.h  peripheralBase.cpp  peripheralBase.h  peripheralTypes.h  port.cpp  port.h  qsm.cpp  qsm.h  sim.cpp  sim.h
source/mc68k/Musashi/: .gitignore  m68k.h  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kfpu.c  m68kmmu.h  m68kops.c  m68kops.h
source/mc68k/Musashi/softfloat/: softfloat-macros  softfloat.c  softfloat.h
source/mqLib/: device.h  mqdsp.cpp  mqhardware.cpp  mqmc.cpp  romloader.cpp
source/networkLib/: stream.h  udpServer.h
source/openWurliLib/: device.cpp  device.h  owDkPreamp.h  owFilters.h  owGenPreamp.h  owGenTremolo.h  owHammer.h  owMelangePreamp.h  owMlpCorrection.h  owMlpWeights.h  owOversampler.h  owPickup.h  owPowerAmp.h  owReed.h  owSpeaker.h  owTables.h  owTremolo.h  owVariation.h  owVoice.h
source/opl3Lib/: device.cpp  device.h
source/plugin/: BasicEditor.cpp  BasicEditor.h  CMakeLists.txt  HeadlessProcessor.cpp  HeadlessProcessor.h  HeadlessProcessor_ios.mm  MinimalController.cpp  MinimalController.h  PluginEntry.cpp  SynthFactory.cpp  SynthFactory.h  SynthType.h
source/ptypes/: pasync.h  pfdxstm.cxx  pinfilter.cxx  pinstm.cxx  pipbase.cxx  pipmsg.cxx  pipmsgsv.cxx  pipstm.cxx  pipstmsv.cxx  poutstm.cxx  pport.h  pputf.cxx  psemaphore.cxx  pstrcase.cxx  pstring.cxx  ptime.cxx
source/ronaldo/esp/: esp.hpp  esp_jit.h  esp_jit_arm64.cpp  esp_jit_x64.cpp  esp_jit_x64.h  esp_jit_x64_pool.cpp  esp_opt.hpp
source/ronaldo/h8s/: h8sdevices.hpp
source/sidLib/: device.cpp  device.h  insLoader.cpp  insLoader.h
source/sidLib/resid/: siddefs.h
source/synthLib/: dac.cpp  device.cpp  device.h  midiClock.cpp  midiClock.h  midiRateLimiter.cpp  plugin.cpp  plugin.h  resampler.cpp  resamplerInOut.cpp  resamplerInOut.h  vstpreset.cpp  wavReader.cpp  wavWriter.cpp
source/virusLib/: device.cpp  device.h  dspMultiTI.cpp  microcontroller.cpp  presetConverter.cpp  presetConverter.h  unpacker.cpp  utils.h
source/xtLib/: xtDSP.cpp  xtDevice.h  xtHardware.cpp  xtRomLoader.cpp  xtRomLoader.h  xtUc.cpp
(+19 files in other folders)
